# Scattered_Points_Interpolation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  algorithm.docx
B_spline/: Rational.hpp  SOURCE.cmake  Types.hpp  basis.cpp  basis.h  curve.cpp  curve.h  curve_energy.cpp  energy.cpp  energy.h  exact_calculation.cpp  exact_calculation.h  mesh_processing.cpp  mesh_processing.h  pia.cpp  surface.cpp  surface.h  test.cpp  test.h
app/: example.cpp  functions.hpp  main.cpp  test.cpp  test.h
app/meshes/: ShanxiBorder.csv  ShanxiStations.csv  ShanxiTemperatures.csv
cmake/: FindGMP.cmake  PrependCurrentPath.cmake  Sparse_InterpDependencies.cmake  Sparse_InterpDownloadExternal.cmake  Sparse_InterpUtils.cmake
comparisons/: compare.cmake  comparison.cpp  comparison.h
data/: Shanxi_border.csv  station.csv  temperature.csv
sparse_interp/: CMakeLists.txt  Types.hpp  border_simplification.cpp  border_simplification.h  distance.cpp  distance.h  example.cpp  example.h  integration.cpp  integration.h
src/: main.cpp
